--- a/client/LocatiSync/app.json
+++ b/client/LocatiSync/app.json
@@ -1,4 +1,9 @@
 {
   "name": "LocatiSync",
-  "displayName": "LocatiSync"
+  "displayName": "LocatiSync",
+  "plugins": [
+    "@react-native-firebase/app",
+    "@react-native-firebase/auth",
+    "@react-native-google-signin/google-signin"
+  ]
 }
