--- a/client/LocatiSync/package.json
+++ b/client/LocatiSync/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.75.4",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-maps": "^1.18.2",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0"
   },
